k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tique-taque-sync
  namespace: tique-taque-sync
  labels:
    app.kubernetes.io/name: tique-taque-sync
  annotations:
    kubernetes.io/ingress.class: nginx # ou traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - ponto.exemplo.com.br # Altere para seu domínio FQDN
      secretName: tique-taque-sync-tls
  rules:
    - host: ponto.exemplo.com.br # Altere para seu domínio FQDN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tique-taque-sync
                port:
                  number: 8000
